; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tlclient.c_unused.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tlclient.c_unused.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@compiler = common dso_local global i32 0, align 4
@stdout = common dso_local global i64 0, align 8
@log_file = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @unused(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i64, i64* @stdout, align 8
  %5 = call i32 @tl_schema_print_unused_types(i32* @compiler, i64 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i64, i64* @log_file, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i64, i64* @log_file, align 8
  %10 = call i32 @tl_schema_print_unused_types(i32* @compiler, i64 %9)
  br label %11

11:                                               ; preds = %8, %1
  %12 = load i32, i32* %3, align 4
  ret i32 %12
}

declare dso_local i32 @tl_schema_print_unused_types(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
